# hm30_stream_reciever

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_cv2.py  test_pub.py  test_sub.py  test_xml  test_xml.cpp
cmake/: version.h.in
config/: fastdds_shm.xml  hm30_slam3r.rviz
docs/: ARCHITECTURE.md  BUILDING.md  SETUP_WALKTHROUGH.md  SLAM3R_SETUP_PROCESS.md
install/: local_setup.sh  setup.sh
log/: latest_build
resources/: resources.qrc  style.qss
scripts/: _diag_pointcloud.py  _fix_slam3r_paths.sh  _test_bridge_imports.sh  _test_imports.sh  hm30_receiver.service  install_slam3r.sh  run_receiver_internal.sh  run_rviz_shm.sh  run_slam3r_bridge.sh  run_slam3r_external.sh  run_uav_control_ui.sh  stream_from_ipcam.sh  stream_from_webcam.sh
slam3r_ros2/: .slam3r_env  slam3r_bridge_node.py
src/cognition_brain_interfaces/: CMakeLists.txt  package.xml
src/cognition_brain_interfaces/srv/: DronePadControl.srv
src/core/: app_config.h  stream_decoder.cpp  stream_decoder.h
src/ros2/: ros2_bridge.cpp  ros2_bridge.h  ros2_publisher_node.cpp  ros2_publisher_node.h
src/uav_control_ui_cpp/: CMakeLists.txt  package.xml  qml.qrc
src/uav_control_ui_cpp/qml/: BottomControls.qml  Dashboard.qml  GraphWidget.qml  Joystick.qml  JoystickView.qml  OccupancyMapView.qml  PointCloudView.qml  PpeViolationView.qml  TelemetryRow.qml  TopBar.qml  main.qml
src/uav_control_ui_cpp/src/: RosBackend.cpp  RosBackend.h  VideoStreamItem.cpp  VideoStreamItem.h  main.cpp
src/ui/: dashboard.cpp  dashboard.h  video_widget.cpp  video_widget.h
